// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TargetChangeDialog test sets for same prev tab and newTab values snapshot: render the only information available in prevTab is appRefreshed 1`] = `
<BlockingDialog
  dialogContentProps={
    Object {
      "title": "Assessment in progress",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "targetChangeDialogModal",
      "containerClassName": "insights-dialog-main-override targetChangeDialog",
      "subtitleAriaId": "target-change-dialog-description",
    }
  }
>
  <div
    id="target-change-dialog-description"
  >
    <div>
      There is already an assessment running on 
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        id="previous-target-page-link"
      >
        <NewTabLink
          role="link"
        />
      </StyledTooltipHostBase>
      . Would you like to continue your current assessment on the new target of 
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        content="https://www.abc.com"
        id="current-target-page-link"
      >
        <StyledLinkBase
          as="a"
          className="insights-link"
          onClick={[Function]}
          role="link"
          tabIndex={0}
        >
          test title 2
        </StyledLinkBase>
      </StyledTooltipHostBase>
      ?
    </div>
    <p>
      <Term>
        Note
      </Term>
      : If 'Continue previous' is selected, the previous assessment will be connected to this new page.
    </p>
    <p>
      If 'Start new' is selected, all previous progress will be lost.
    </p>
  </div>
  <StyledDialogFooterBase>
    <div
      className="targetChangeDialogButtonContainer"
    >
      <div
        className="actionCancelButtonCol continueButton"
      >
        <CustomizedDefaultButton
          autoFocus={true}
          onClick={[Function]}
          text="Continue previous"
        />
      </div>
      <div
        className="actionCancelButtonCol restartButton"
      >
        <CustomizedDefaultButton
          onClick={[Function]}
          text="Start new"
        />
      </div>
    </div>
  </StyledDialogFooterBase>
</BlockingDialog>
`;

exports[`TargetChangeDialog test sets for same prev tab and newTab values snapshot: render when previous tab info shows app is refreshed 1`] = `
<BlockingDialog
  dialogContentProps={
    Object {
      "title": "Assessment in progress",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "targetChangeDialogModal",
      "containerClassName": "insights-dialog-main-override targetChangeDialog",
      "subtitleAriaId": "target-change-dialog-description",
    }
  }
>
  <div
    id="target-change-dialog-description"
  >
    <div>
      There is already an assessment running on 
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        content="https://www.abc.com"
        id="previous-target-page-link"
      >
        <NewTabLink
          href="https://www.abc.com"
          role="link"
        >
          test title 1
        </NewTabLink>
      </StyledTooltipHostBase>
      . Would you like to continue your current assessment on the new target of 
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        content="https://www.def.com"
        id="current-target-page-link"
      >
        <StyledLinkBase
          as="a"
          className="insights-link"
          onClick={[Function]}
          role="link"
          tabIndex={0}
        >
          test title 2
        </StyledLinkBase>
      </StyledTooltipHostBase>
      ?
    </div>
    <p>
      <Term>
        Note
      </Term>
      : If 'Continue previous' is selected, the previous assessment will be connected to this new page.
    </p>
    <p>
      If 'Start new' is selected, all previous progress will be lost.
    </p>
  </div>
  <StyledDialogFooterBase>
    <div
      className="targetChangeDialogButtonContainer"
    >
      <div
        className="actionCancelButtonCol continueButton"
      >
        <CustomizedDefaultButton
          autoFocus={true}
          onClick={[Function]}
          text="Continue previous"
        />
      </div>
      <div
        className="actionCancelButtonCol restartButton"
      >
        <CustomizedDefaultButton
          onClick={[Function]}
          text="Start new"
        />
      </div>
    </div>
  </StyledDialogFooterBase>
</BlockingDialog>
`;

exports[`TargetChangeDialog test sets for same prev tab and newTab values snapshot: render when tab ids are same and also url doesn't change 1`] = `
<BlockingDialog
  dialogContentProps={
    Object {
      "title": "Assessment in progress",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "targetChangeDialogModal",
      "containerClassName": "insights-dialog-main-override targetChangeDialog",
      "subtitleAriaId": "target-change-dialog-description",
    }
  }
>
  <div
    id="target-change-dialog-description"
  >
    <div>
      There is already an assessment running on 
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        content="https://www.abc.com"
        id="previous-target-page-link"
      >
        <NewTabLink
          href="https://www.abc.com"
          role="link"
        >
          test title 1
        </NewTabLink>
      </StyledTooltipHostBase>
      . Would you like to continue your current assessment on the new target of 
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        content="https://www.abc.com"
        id="current-target-page-link"
      >
        <StyledLinkBase
          as="a"
          className="insights-link"
          onClick={[Function]}
          role="link"
          tabIndex={0}
        >
          test title 2
        </StyledLinkBase>
      </StyledTooltipHostBase>
      ?
    </div>
    <p>
      <Term>
        Note
      </Term>
      : If 'Continue previous' is selected, the previous assessment will be connected to this new page.
    </p>
    <p>
      If 'Start new' is selected, all previous progress will be lost.
    </p>
  </div>
  <StyledDialogFooterBase>
    <div
      className="targetChangeDialogButtonContainer"
    >
      <div
        className="actionCancelButtonCol continueButton"
      >
        <CustomizedDefaultButton
          autoFocus={true}
          onClick={[Function]}
          text="Continue previous"
        />
      </div>
      <div
        className="actionCancelButtonCol restartButton"
      >
        <CustomizedDefaultButton
          onClick={[Function]}
          text="Start new"
        />
      </div>
    </div>
  </StyledDialogFooterBase>
</BlockingDialog>
`;

exports[`TargetChangeDialog test sets for same prev tab and newTab values snapshot: render when tab ids are same but url changes 1`] = `
<BlockingDialog
  dialogContentProps={
    Object {
      "title": "Assessment in progress",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "targetChangeDialogModal",
      "containerClassName": "insights-dialog-main-override targetChangeDialog",
      "subtitleAriaId": "target-change-dialog-description",
    }
  }
>
  <div
    id="target-change-dialog-description"
  >
    <div>
      There is already an assessment running on 
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        content="https://www.abc.com"
        id="previous-target-page-link"
      >
        <NewTabLink
          href="https://www.abc.com"
          role="link"
        >
          test title 1
        </NewTabLink>
      </StyledTooltipHostBase>
      . Would you like to continue your current assessment on the new target of 
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        content="https://www.def.com"
        id="current-target-page-link"
      >
        <StyledLinkBase
          as="a"
          className="insights-link"
          onClick={[Function]}
          role="link"
          tabIndex={0}
        >
          test title 2
        </StyledLinkBase>
      </StyledTooltipHostBase>
      ?
    </div>
    <p>
      <Term>
        Note
      </Term>
      : If 'Continue previous' is selected, the previous assessment will be connected to this new page.
    </p>
    <p>
      If 'Start new' is selected, all previous progress will be lost.
    </p>
  </div>
  <StyledDialogFooterBase>
    <div
      className="targetChangeDialogButtonContainer"
    >
      <div
        className="actionCancelButtonCol continueButton"
      >
        <CustomizedDefaultButton
          autoFocus={true}
          onClick={[Function]}
          text="Continue previous"
        />
      </div>
      <div
        className="actionCancelButtonCol restartButton"
      >
        <CustomizedDefaultButton
          onClick={[Function]}
          text="Start new"
        />
      </div>
    </div>
  </StyledDialogFooterBase>
</BlockingDialog>
`;

exports[`TargetChangeDialog test sets for same prev tab and newTab values snapshot: render when target tab id changed 1`] = `
<BlockingDialog
  dialogContentProps={
    Object {
      "title": "Assessment in progress",
      "type": 0,
    }
  }
  hidden={false}
  modalProps={
    Object {
      "className": "targetChangeDialogModal",
      "containerClassName": "insights-dialog-main-override targetChangeDialog",
      "subtitleAriaId": "target-change-dialog-description",
    }
  }
>
  <div
    id="target-change-dialog-description"
  >
    <div>
      There is already an assessment running on 
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        content="https://www.abc.com"
        id="previous-target-page-link"
      >
        <NewTabLink
          href="https://www.abc.com"
          role="link"
        >
          test title 1
        </NewTabLink>
      </StyledTooltipHostBase>
      . Would you like to continue your current assessment on the new target of 
      <StyledTooltipHostBase
        calloutProps={
          Object {
            "gapSpace": 0,
          }
        }
        content="https://www.def.com"
        id="current-target-page-link"
      >
        <StyledLinkBase
          as="a"
          className="insights-link"
          onClick={[Function]}
          role="link"
          tabIndex={0}
        >
          test title 2
        </StyledLinkBase>
      </StyledTooltipHostBase>
      ?
    </div>
    <p>
      <Term>
        Note
      </Term>
      : If 'Continue previous' is selected, the previous assessment will be connected to this new page.
    </p>
    <p>
      If 'Start new' is selected, all previous progress will be lost.
    </p>
  </div>
  <StyledDialogFooterBase>
    <div
      className="targetChangeDialogButtonContainer"
    >
      <div
        className="actionCancelButtonCol continueButton"
      >
        <CustomizedDefaultButton
          autoFocus={true}
          onClick={[Function]}
          text="Continue previous"
        />
      </div>
      <div
        className="actionCancelButtonCol restartButton"
      >
        <CustomizedDefaultButton
          onClick={[Function]}
          text="Start new"
        />
      </div>
    </div>
  </StyledDialogFooterBase>
</BlockingDialog>
`;
